--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
-    }
+    },
+    "packageManager": "yarn@4.0.1"
 }
