--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
+    "packageManager": "yarn@4.3.1",
     "dependencies": {
         "sass-loader": "^14.2.1"
     }
