--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
-    "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
-        "@popperjs/core": "^2.11.8",
-        "@symfony/webpack-encore": "^4.0.0",
-        "@types/express": "^5.0.0",
-        "bootstrap": "^5.3.3",
-        "core-js": "^3.23.0",
-        "jquery": "^3.7.1",
-        "regenerator-runtime": "^0.13.9",
-        "sass": "^1.79.3",
-        "webpack": "^5.95.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-notifier": "^1.15.0"
-    },
-    "license": "UNLICENSED",
-    "private": true,
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
-    "dependencies": {
-        "sass-loader": "^16.0.2"
-    }
+  "packageManager": "yarn@4.5.3",
+  "devDependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@types/express": "^5.0.0",
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "sass": "^1.83.0",
+    "webpack": "^5.97.1"
+  },
+  "dependencies": {
+    "sass-loader": "^16.0.4"
+  }
 }
