--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "packageManager": "yarn@4.5.3",
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
     "@popperjs/core": "^2.11.8",
+    "@symfony/webpack-encore": "^5.0.1",
     "@types/express": "^5.0.0",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "sass": "^1.83.0",
-    "webpack": "^5.97.1"
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
     "sass-loader": "^16.0.4"
